updated README, final code tweaks

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1710,7 +1710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:**\n",
+    "**Discussion about the Temp vs Latitude relationship:**\n",
     "\n",
     "When split into hemispheres, it appears that the relationships between temperature and latitude are opposites for northern vs southern hemisphere. However, the highest temperatures are latitudes closest to zero in both cases. For Northern Hemisphere, 0 degrees is on the left of the graph, and in the Southern Hemisphere graph 0 degrees is on the right. The r-squared value is weaker in the Southern Hemisphere than Northern. This could be because a lot of the landmass in the Southern Hemisphere is closer to the equator than the landmass in the Northern Hemisphere."
    ]
@@ -1804,7 +1804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:**\n",
+    "**Discussion about the Humidity vs Latitude relationship:**\n",
     "\n",
     "These lines are pretty similar for Northern and Southern Hemispheres. The r-squared values for both hemispheres is relatively low, meaning a very loose correlation. Oddly enough, the Northern Hemisphere's regression line indicates that the higher latitudes tend to be more humid, while in the Southern Hemisphere the lower latitudes (closer to the equator) tend to be more humid."
    ]
@@ -1898,9 +1898,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:**\n",
+    "**Discussion about the Cloudiness vs Latitude relationship:**\n",
     "\n",
-    "The r-squared values for both hemispheres is pretty low, meaning there isn't a very strong correlation between latitude and cloudiness. THere seems to be little difference in distribution between the hemispheres."
+    "The r-squared values for both hemispheres is pretty low, meaning there isn't a very strong correlation between latitude and cloudiness. There seems to be little difference in distribution between the hemispheres."
    ]
   },
   {
@@ -1992,7 +1992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:**\n",
+    "**Discussion about the Wind vs Latitude relationship:**\n",
     "\n",
     "The relationship between latitude and wind speed is very weak - the r-squared values for both hemispheres is low. The ranges for both hemispheres seem similar - with just a handful of outliers. The slopes of both regression lines are very low, meaning that there is little difference in wind speeds across latitudes (overall)."
    ]
